infrastructure/kubernetes/dockercoins/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dockercoins
  labels:
    app.kubernetes.io/name: dockercoins
    app.kubernetes.io/part-of: devops-agent-test
